--- a/app/src/main/res/layout/nav_header_admin.xml
+++ b/app/src/main/res/layout/nav_header_admin.xml
@@ -13,6 +13,7 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:src="@drawable/avatar_2"
+        android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:contentDescription="Admin Avatar" />
